--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
-    <!-- Explicitly disable favicon (prevents browser from requesting /favicon.ico) -->
-    <link rel="icon" href="data:," />
+    <!-- Favicon: A+ badge -->
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
 
     <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="Lovable App" />
@@ -24,6 +24,12 @@
 
   <body>
     <div id="root"></div>
+
+    <!-- Visible attribution required by Flaticon for free assets -->
+    <footer style="font-size:12px; text-align:center; margin-top:1rem;">
+      <a href="https://www.flaticon.com/free-icons/grades" title="grades icons">Grades icons created by juicy_fish - Flaticon</a>
+    </footer>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
